(lang dune 3.5)

(name sqlite-backup)

(generate_opam_files true)

(source
 (github mtelvers/sqlite-backup))

(authors "Mark Elvers")

(maintainers "Mark Elvers")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name sqlite-backup)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
